<resources>
    <string name="app_name" translatable="false">UBITouch</string>
    <string name="email" translatable="false">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="username_email">Username/Email</string>
    <string name="login" translatable="false">Log In</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="no_account">Don\'t have an account yet? Register here!</string>
    <!-- Feed -->
    <string name="header_title" translatable="false">Timeline</string>
    <string name="no_posts">Oops! No posts yet.</string>
    <string name="feed_welcome">Hello, dear user!</string>
    <string name="feed_explore">Let\'s explore what\'s happening.</string>
    <!-- Profile -->
    <string name="edit_profile">Edit profile</string>
    <string name="bio" translatable="false">Bio</string>
    <string name="save">Save</string>
    <string name="name">Name</string>

    <string name="emptyFieldError">Please fill all the fields!</string>
    <string name="differentPasswords">The passwords are different!</string>
    <string name="tooShortPassword">The password must have at least 10 characters!</string>
    <string name="invalidEmail">The email is not valid!</string>
    <string name="existing_user">The inserted username or email is already in use. Try another!</string>
    <string name="incorrect_credentials">The username or password is incorrect!</string>
    <!-- Create -->
    <string name="post_publish">Post</string>
    <string name="post_title">Title</string>
    <string name="post_description">Description</string>
    <string name="post_attach">Attach media</string>
    <string name="post_pick_date">Pick date</string>
    <string name="post_pick_time">Pick time</string>
    <string name="post_empty_title">Title cannot be empty.</string>
    <string name="post_tmc_title">Title is too long.</string>
    <string name="post_tmc_desc">Description is too long.</string>
    <string name="post_media_error">Error loading attachment.</string>
    <string name="post_date_error">You must pick a date.</string>
    <string name="post_time_error">Error inserting hour.</string>
    <string name="post_nd">Undefined</string>
    <string name="select_time">Select time</string>
    <string name="discard">Discard changes</string>
    <!-- Months -->
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="error_msg">An error has occurred. Try again!</string>
    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="night_mode">Night Mode</string>
    <string name="notifications">Notifications</string>
    <string name="security_privacy">Security and Privacy</string>
    <string name="language">Language</string>
    <string name="about_us">About Us</string>
    <string name="logout" translatable="false">Logout</string>\
    <string name="remove_users">Remove Users</string>
    <!-- Security and Privacy -->
    <string name="change_password">Change Password</string>
    <string name="deactivate_account">Delete your account</string>
    <!-- Change Password -->
    <string name="pw_error_occurred">An error has occurred! Try again!</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <!-- Deactivate -->
    <string name="deactivate_info">You are about to delete your UBItouch account. In order to complete your request, please enter your password.</string>
    <string name="deactivate">Delete</string>
    <!-- Language -->
    <string name="choose_language">Choose language</string>
    <!-- Post -->
    <string name="post_default_username">Anonymous</string>
    <string name="post_default_text">Undefined</string>
    <string name="post_verified">Verified</string>
    <string name="post_unverified">Unverified</string>

    <!--    Maps -->
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoiY2FydmFsaG8yOCIsImEiOiJjbGJwYmlrcXYwOXFzM29wazZxZHU5eGJmIn0.SKuQy2CnJf3NLeT2c1MljQ</string>


    <!-- Landing page -->
    <string name="lp_register">Register</string>
    <string name="lp_login">Login</string>
    <string name="lp_copyright" translatable="false">UBITouch Team © 2022</string>
    <string name="lp_slogan">Get in touch with what’s happening at UBI.</string>
    <string name="lp_slogan_hl">touch</string>

    <!-- Create page -->
    <string name="cr_title">NEW EVENT</string>
    <string name="cr_subtitle">What\'s happening at UBI?</string>
    <string name="cr_subtitle_hl">happening</string>
    <string name="cr_review">After submitting, the created event will be reviewed by a moderator.</string>

    <!-- Event page -->
    <string name="ev_localization">Maps</string>
    <string name="ev_interested">Interested</string>
    <string name="ev_share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!--  Delete  -->
    <string name="delete_acc">DELETE ACCOUNT</string>

    <!-- Language -->
    <string name="en" translatable="false">English</string>
    <string name="pt" translatable="false">Português</string>
    <string name="fr" translatable="false">Français</string>

    <!-- Login -->
    <string name="login_welcome">Welcome back!</string>
    <string name="login_register">Register here!</string>
    <string name="login_no_password">Don\'t have an account yet?</string>

    <!--  Profile  -->
    <string name="profile_name">Name</string>
    <string name="events">Events</string>
    <string name="interests">Interests</string>

    <!--  Register  -->
    <string name="on_board">Let\'s get you on board.</string>
    <string name="already_have_acc">Already have an account? </string>

    <!--  Misc  -->
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    <!--  Footer  -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>

    <!--  User Recycler  -->
    <string name="delete">Delete</string>
    <!-- About Us -->
    <string name="about_us_dev">Developed by</string>
    <string name="about_us_dev1">Diogo Carvalho no.45716</string>
    <string name="about_us_dev2">Eduardo Mendes no.45916</string>
    <string name="about_us_dev3">Guilherme Barata no.45779</string>
    <string name="about_us_dev4">João Marques no.45722</string>
    <string name="about_us_dev5">Matilde Rosa no.46785</string>

    <string name="about_us_sup">Supervised by</string>
    <string name="about_us_sup1" translatable="false">Prof. Paulo Fazendeiro</string>

    <string name="about_us_bsc">BsC in Computer Science and Engineering</string>
    <string name="about_us_uc">Mobile Device Programming</string>
    <string name="about_us_year" translatable="false">2022/2023</string>
    <string name="about_us_uni">University of Beira Interior</string>


</resources>