<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/footer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    style="@style/FooterColorStyle">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/home"
            app:srcCompat="@drawable/ic_baseline_home_24">

        </ImageButton>

        <ImageButton
            android:id="@+id/btnSearch"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/search"
            app:srcCompat="@drawable/ic_baseline_search_24">

        </ImageButton>

        <ImageButton
            android:id="@+id/btnProfile"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/profile"
            app:srcCompat="@drawable/ic_person">

        </ImageButton>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>