<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LanguageActivity">

    <include
        layout="@layout/header_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView6"
            style="@style/SecurityTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/language"
            android:textAllCaps="true"
            android:textSize="36sp" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        style="@style/SecurityCardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/langEn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:drawableStart="@drawable/flag_en"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:paddingVertical="6dp"
                android:text="@string/en" />

            <TextView
                android:id="@+id/langFr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:drawableStart="@drawable/flag_fr"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:paddingVertical="6dp"
                android:text="@string/fr" />

            <TextView
                android:id="@+id/langPt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:drawableStart="@drawable/flag_pt"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:paddingVertical="6dp"
                android:text="@string/pt" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
